1.0dev: Fixed double scrollbars with IE8 compatibility mode and force IE family to render in the recent mode
git-svn-id: http://trac.edgewall.org/intertrac/log:/trunk@11155 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/htdocs/css/trac.css
+++ b/trac/htdocs/css/trac.css
@@ -1,10 +1,10 @@
 /* -*- coding: utf-8 -*- */
+html { overflow-y: scroll }
 body {
  background: #fff;
  color: #000;
  margin: 10px;
  padding: 0;
- overflow-y: scroll;
 }
 body, th, tr {
  font: normal 13px Verdana,Arial,'Bitstream Vera Sans',Helvetica,sans-serif;
